--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,9 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 250px;
+  width: 388px;
   height: 100%;
-  background-color: #f8f9fa;
+  background-color: #ffff;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   transform: translateX(-100%);
   transition: transform 0.3s ease-in-out;
