--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,17 +30,17 @@
   cursor: pointer;
 }
 
-ul {
+.sidebar ul {
   list-style: none;
   padding: 0;
   margin-top: 50px;
 }
 
-li {
+.sidebar li {
   margin: 15px 0;
 }
 
-a {
+.sidebar a {
   text-decoration: none;
   color: #333;
   font-size: 1.2rem;
@@ -48,6 +48,6 @@ a {
   display: block;
 }
 
-a:hover {
+.sidebar a:hover {
   background-color: #ddd;
 }
