--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Estilos da Sidebar */
+html,
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 .sidebar {
   position: fixed;
   top: 0;
